# langgraph-deep-research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Makefile  README.md  langgraph.json  pyproject.toml
.ai/: decisions.md  status.md
.ai/tasks/: digest-quality-fixes.md
.hac/: README.md  decisions.md  status.md
.hac/tasks/: digest-quality-fixes.md  fix-global-searched-queries.md  m0-m1-implementation.md
docs/: architecture.md  codebase-guide.md  output-quality-guide.md  why-langgraph.md
examples/: dev_streaming.py  research_demo.ipynb  run.py  utils.py
src/deep_research_agent/: __init__.py  agent.py  logging.py  models.py  sources.py  state.py  streaming.py  task.py
src/deep_research_agent/prompts/: __init__.py  summarize.py  system.py
src/deep_research_agent/tools/: __init__.py  arxiv.py  arxiv_tool.py  files.py  research.py  todos.py  web_tool.py
src/deep_research_agent/ui/: __init__.py  server.py
src/deep_research_agent/ui/static/: app.js  index.html  styles.css
tests/: conftest.py
tests/unit/: test_arxiv_tool.py  test_state.py  test_web.py  test_web_tool.py
